src/objects/TR1__MapToContact__mdt.object
<CustomObject>
    <description>Used for dynamically assign the values to contact fields in apex class.</description>
    <fields>
        <fullName>TR1__CandidateId__c</fullName>
        <label>CandidateId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__CountryCode__c</fullName>
        <label>CountryCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__DOB__c</fullName>
        <label>DOB</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Email__c</fullName>
        <label>Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Fax__c</fullName>
        <label>Fax</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__FirstName__c</fullName>
        <label>FirstName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__HomePhone__c</fullName>
        <label>HomePhone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Languages__c</fullName>
        <label>Languages</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__MobilePhone__c</fullName>
        <label>MobilePhone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Nationality__c</fullName>
        <label>Nationality</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__OtherPhone__c</fullName>
        <label>OtherPhone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Region__c</fullName>
        <label>Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Skills__c</fullName>
        <label>Skills</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__StreetAddress1__c</fullName>
        <label>StreetAddress1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__StreetAddress3__c</fullName>
        <label>StreetAddress3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__WorkPhone__c</fullName>
        <label>WorkPhone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>MapToContact</label>
    <pluralLabel>MapToContacts</pluralLabel>
</CustomObject>